# LISA-Socials-Tool-Public

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  fileagent.cpp  fileagent.h  instagram.cpp  instagram.h  lang.cpp  lang.h  manager.cpp  manager.h  utils.cpp  utils.h
src/dialogs/: CMakeLists.txt  blockingoverlay.cpp  blockingoverlay.h  infodialog.cpp  infodialog.h  infodialog.ui  mediaviewerdialog.cpp  mediaviewerdialog.h  mediaviewerdialog.ui
src/gui/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
src/resources/: resources.qrc
src/templates/: settings.json
